# mpchecker_offline

./: .gitignore  README.md  bench.py  environment.yml  profile_run.py  pyproject.toml
mpchecker/: __init__.py  bright_table.py  checker.py  cli.py  config.py  daemon.py  index.py  mpcat.py  mpcorb.py  obs_parser.py  orbitfit.py  propagator.py  satellites.py
scripts/: download_data.sh
tests/: test_multi_format.py  test_obs_parser.py  test_propagator.py
