[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mpchecker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "astropy",
    "astroquery",
    "spiceypy",
    "requests",
    "tqdm",
]

[project.scripts]
mpchecker = "mpchecker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mpchecker*"]
